- Moved ui files to separate folder - Added git ignore file

--- a/ui/debt_output.ui
+++ b/ui/debt_output.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>bills_output</class>
- <widget class="QDialog" name="bills_output">
+ <class>debt_output</class>
+ <widget class="QDialog" name="debt_output">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>debt_output</string>
   </property>
   <widget class="QPlainTextEdit" name="plainTextEdit">
    <property name="geometry">
