--- a/ui/bills.ui
+++ b/ui/bills.ui
@@ -30,7 +30,14 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="3" column="1">
-     <widget class="QLineEdit" name="amt_line_edit"/>
+     <widget class="QLineEdit" name="amt_line_edit">
+      <property name="text">
+       <string>123</string>
+      </property>
+      <property name="placeholderText">
+       <string>Amount</string>
+      </property>
+     </widget>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="amt_lbl">
@@ -45,7 +52,14 @@
      </widget>
     </item>
     <item row="4" column="1">
-     <widget class="QLineEdit" name="date_line_edit"/>
+     <widget class="QLineEdit" name="date_line_edit">
+      <property name="text">
+       <string>2</string>
+      </property>
+      <property name="placeholderText">
+       <string>Date</string>
+      </property>
+     </widget>
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="date_lbl">
@@ -72,7 +86,14 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="name_line_edit"/>
+     <widget class="QLineEdit" name="name_line_edit">
+      <property name="text">
+       <string>Ima Bill</string>
+      </property>
+      <property name="placeholderText">
+       <string>Name</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
