--- a/ui/payday.ui
+++ b/ui/payday.ui
@@ -54,10 +54,24 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="amt_line_edit"/>
+     <widget class="QLineEdit" name="amt_line_edit">
+      <property name="text">
+       <string>123</string>
+      </property>
+      <property name="placeholderText">
+       <string>Amount</string>
+      </property>
+     </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QLineEdit" name="date_line_edit"/>
+     <widget class="QLineEdit" name="date_line_edit">
+      <property name="text">
+       <string>1</string>
+      </property>
+      <property name="placeholderText">
+       <string>Date</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
